--- a/src/style/workout.css
+++ b/src/style/workout.css
@@ -1,22 +1,60 @@
-@import "common.css";
+body {
+    color            : white;
+    background-color : black;
+    margin           : 0;
+    border           : 0;
+    padding          : 0;
+    font-family      : Helvetica, Arial, Sans-serif;
+    font-size        : 20pt;
+}
+h1 {
+    font-size        : 1.1em;
+}
+a {
+    color            : white;
+}
+input[type='button'] {
+    height           : 1.5em;
+    font-size        : 1em;
+    border           : none;
+    border-radius    : 0.3em;
+    font-family      : inherit;
+}
+@media screen and (min-width: 49em) {
+    body { font-size : 30pt; }
+}
+@media screen and (min-width: 69em) {
+    body { font-size : 40pt; }
+}
+@media screen and (min-width: 79em) {
+    body { font-size : 53pt; }
+}
+@media screen and (max-width: 29em) {
+    body { font-size : 12pt; }
+
+    .hideonmobile {
+        display          : none;
+    }
+}
+
 div.numbers {
 }
-div#workout, div#settings {
+#workout, #settings {
     color            : #999;
     width            : 100%;
     margin-top       : 1em;
     font-size        : 0.7em;
 }
-div#workout {
+#workout {
     z-index          : 0;
     height           : 2em;
     text-align       : center;
 }
-div#workout:hover {
+#workout:hover {
     background-color : #444;
     color            : white;
 }
-div#settings {
+#settings {
     z-index          : 1;
     display          : none;
     background-color : #444;
@@ -45,22 +83,22 @@ div#settings {
     border-radius    : 0.15em;
     text-shadow      : black +0.04em +0.04em +0.04em;
 }
-div#everything {
+#everything {
     position         : relative;
     z-index          : 0;
     top              : 0;
     margin           : 0;
 }
-canvas#bgcanvas {
+#bgcanvas {
     position         : absolute;
     background-color : inherit;
     z-index          : -1;
 }
-div#exercisename {
+#exercisename {
     text-align       : center;
     font-size        : 1.2em;
 }
-div#exercisetime {
+#exercisetime {
     text-align       : center;
     font-size        : 3.5em;
 }
@@ -95,7 +133,7 @@ div#exercisetime {
         right        : inherit;
         top          : inherit;
     }
-    div#settings {
+    #settings {
         background-color: black;
         color : pink;
     }
